--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "knex": "^0.95.4",
     "nodemon": "^2.0.7",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "uuid": "^3.4.0"
   }
 }
