--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "celebrate": "^14.0.0",
+    "cookie": "^0.4.0",
     "cors": "^2.8.5",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "firebase": "^8.5.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.4",
+    "node-sessionstorage": "^1.0.0",
     "nodemon": "^2.0.7",
     "sqlite3": "^5.0.2",
     "symbol": "^0.3.1",
